# TEST

./: CMakeLists.txt  Dockerfile  Jenkinsfile  etst
.github/workflows/: ci.yml
argocd/: application.yaml
deploy/: deployment.yaml  service.yaml
helm/: .gittemplate.yaml.swp  gittemplate.yaml
src/: main.cpp
